# unifai-sdk-py

./: .gitignore  LICENSE  README.md  env.example  example.py  pyproject.toml  reflector_memory.py  requirements.txt
.github/workflows/: publish-to-pypi.yml
agiverse/: __init__.py
agiverse/agent/: agent.py  data.py  messaging.py  model.py  summary.py  utils.py
agiverse/agent/memory/: base.py  embedding.py  importance.py  manager.py  reflection.py  spatial.py  storage.py  working_memory.py
agiverse/agent/prompts/: agent.yaml  character.yaml  summarize.yaml
agiverse/common/: const.py
agiverse/smart_building/: __init__.py  context.py  smart_building.py
examples/: .env.example  agent.py  chroma_memory.py  create_tools.py  custom_toolkit.py  memory.py  openai_api.py  smart_building.py  telegram_example.py  use_toolkit.py  use_tools.py
unifai/: __init__.py
unifai/agent/: __init__.py  agent.py  api.py  model.py  summary.py  telegram_agent.py  utils.py
unifai/agent/memory/: embedding.py  importance.py
unifai/agent/prompts/: agent.yaml  character.yaml  summarize.yaml
unifai/client/: __init__.py  base.py  discord.py  openai.py  telegram.py  twitter.py
unifai/common/: api.py  const.py
unifai/memory/: __init__.py  base.py  chroma.py  exceptions.py  plugin.py  protocols.py  reflector_memory.py  tool_plugin.py  utils.py
unifai/memory/examples/: reflector_memory.py
unifai/reflector/: __init__.py  base.py  fact.py  goal.py  types.py
unifai/toolkit/: __init__.py  api.py  context.py  messages.py  toolkit.py
unifai/tools/: api.py  tools.py
unifai/tools/mcp/: server.py
