[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unifai-sdk"
version = "0.3.3"
authors = [
  { name="UnifAI", email="contact@unifai.network" },
]
description = "UnifAI Python SDK"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0",
    "websockets>=10.0",
    "numpy>=2.0.0",
    "aiofiles>=24.0.0",
    "tenacity>=9.0.0",
    "pydantic>=2.0.0",
    "chromadb>=0.6.0",
    "mcp>=1.2.0",
    "python-telegram-bot>=20.0",
    "google-cloud-aiplatform>=1.82.0",
    "boto3>=1.37.3",
    "litellm>=1.63.0",
    "tweepy>=4.15.0",
    "discord-py>=2.5.2",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/unifai-network/unifai-sdk-py"
Issues = "https://github.com/unifai-network/unifai-sdk-py/issues"

[project.scripts]
unifai-tools-mcp = "unifai.tools.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["unifai"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
